// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Buttons Components - Experimental Enabled ButtonLink Snapshot 1`] = `
<View
  accessibilityLabel="label"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 14,
      "left": 24,
      "right": 24,
      "top": 14,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "textAlignVertical": "center",
        },
        false,
        {
          "columnGap": 8,
        },
        {},
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <Text
      accessibilityElementsHidden={true}
      accessible={false}
      allowFontScaling={true}
      ellipsizeMode="tail"
      importantForAccessibility="no-hide-descendants"
      maxFontSizeMultiplier={1.25}
      numberOfLines={1}
      style={
        [
          {},
          {
            "color": "#0E0F13",
            "fontFamily": "Titillio",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "lineHeight": undefined,
          },
          {
            "color": undefined,
          },
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled ButtonOutline Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 24,
          "textAlignVertical": "center",
        },
        false,
        {
          "borderWidth": 2,
        },
        {
          "height": 48,
        },
        false,
        {
          "backgroundColor": "rgba(231,236,252,0)",
          "borderColor": "#0B3EE3",
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "backgroundColor": undefined,
          "borderColor": undefined,
        },
      ]
    }
  >
    <Text
      accessibilityElementsHidden={true}
      accessible={false}
      allowFontScaling={true}
      ellipsizeMode="tail"
      importantForAccessibility="no-hide-descendants"
      maxFontSizeMultiplier={1.25}
      numberOfLines={1}
      style={
        [
          {},
          {
            "color": "#0E0F13",
            "fontFamily": "Titillio",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "lineHeight": undefined,
          },
          [
            {
              "alignSelf": "center",
            },
            {
              "color": undefined,
            },
          ],
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled ButtonSolid Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 24,
          "textAlignVertical": "center",
        },
        {
          "overflow": "hidden",
        },
        false,
        {
          "height": 48,
        },
        {
          "backgroundColor": "#0B3EE3",
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <View
      entering={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        maxFontSizeMultiplier={1.25}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": "#FFFFFF",
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": 20,
            },
            {
              "alignSelf": "center",
            },
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled IconButton Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "alignItems": "center",
        },
        {
          "justifyContent": "center",
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      animatedProps={
        {
          "color": undefined,
        }
      }
      bbHeight={24}
      bbWidth={24}
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#0B3EE3",
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      tintColor="#0B3EE3"
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled IconButtonContained Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "elevation": 0,
          "justifyContent": "center",
        },
        {
          "borderRadius": 48,
          "height": 48,
          "width": 48,
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      animatedProps={
        {
          "color": undefined,
        }
      }
      bbHeight={24}
      bbWidth={24}
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#0B3EE3",
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      tintColor="#0B3EE3"
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled IconButtonSolid Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "elevation": 0,
          "justifyContent": "center",
        },
        {
          "borderRadius": 56,
          "height": 56,
          "width": 56,
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "backgroundColor": undefined,
        },
        {
          "backgroundColor": "#0B3EE3",
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#FFFFFF",
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      tintColor="#FFFFFF"
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Test Buttons Components ButtonLink Snapshot 1`] = `
<View
  accessibilityLabel="label"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 14,
      "left": 24,
      "right": 24,
      "top": 14,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "textAlignVertical": "center",
        },
        false,
        {
          "columnGap": 8,
        },
        {},
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <Text
      accessibilityElementsHidden={true}
      accessible={false}
      allowFontScaling={false}
      ellipsizeMode="tail"
      importantForAccessibility="no-hide-descendants"
      maxFontSizeMultiplier={1.25}
      numberOfLines={1}
      style={
        [
          {},
          {
            "color": "#0E0F13",
            "fontFamily": "Titillium Sans Pro",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": undefined,
          },
          {
            "color": undefined,
          },
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`Test Buttons Components ButtonOutline Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "textAlignVertical": "center",
        },
        false,
        {
          "borderWidth": 1,
        },
        {
          "height": 40,
        },
        false,
        {
          "backgroundColor": "rgba(0,115,230,0)",
          "borderColor": "#0073E6",
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "backgroundColor": undefined,
          "borderColor": undefined,
        },
      ]
    }
  >
    <Text
      accessibilityElementsHidden={true}
      accessible={false}
      allowFontScaling={false}
      ellipsizeMode="tail"
      importantForAccessibility="no-hide-descendants"
      maxFontSizeMultiplier={1.25}
      numberOfLines={1}
      style={
        [
          {},
          {
            "color": "#0E0F13",
            "fontFamily": "Titillium Sans Pro",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": undefined,
          },
          [
            {
              "alignSelf": "center",
            },
            {
              "color": undefined,
            },
          ],
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`Test Buttons Components ButtonSolid Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "textAlignVertical": "center",
        },
        {
          "overflow": "hidden",
        },
        false,
        {
          "height": 40,
        },
        {
          "backgroundColor": "#0073E6",
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <View
      entering={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        maxFontSizeMultiplier={1.25}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": "#FFFFFF",
              "fontFamily": "Titillium Sans Pro",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 20,
            },
            {
              "alignSelf": "center",
            },
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components IconButton Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "alignItems": "center",
        },
        {
          "justifyContent": "center",
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      animatedProps={
        {
          "color": undefined,
        }
      }
      bbHeight={24}
      bbWidth={24}
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#0073E6",
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      tintColor="#0073E6"
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Test Buttons Components IconButtonContained Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "elevation": 0,
          "justifyContent": "center",
        },
        {
          "borderRadius": 48,
          "height": 48,
          "width": 48,
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      animatedProps={
        {
          "color": undefined,
        }
      }
      bbHeight={24}
      bbWidth={24}
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#0073E6",
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      tintColor="#0073E6"
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Test Buttons Components IconButtonSolid Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "elevation": 0,
          "justifyContent": "center",
        },
        {
          "borderRadius": 56,
          "height": 56,
          "width": 56,
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "backgroundColor": undefined,
        },
        {
          "backgroundColor": "#0073E6",
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#FFFFFF",
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      tintColor="#FFFFFF"
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
